--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "main": "index.js",
   "repository": "https://github.com/multi-test/multi-test-web",
   "author": "Yaroslav Serhieiev <noomorph@gmail.com>",
-  "license": "GPL-3",
+  "license": "GPL-3.0-only",
   "private": false,
   "dependencies": {
     "hyperapp": "^1.2.5",
-    "hyperapp-router": "^0.2.2"
+    "@hyperapp/router": "^0.7.0"
   },
   "devDependencies": {
-    "typescript": "^2.8.1"
+    "jest": "^23.4.0",
+    "rollup": "^0.62.0",
+    "typescript": "^2.9.0"
   }
 }
