--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
   "private": false,
   "dependencies": {
     "hyperapp": "^1.2.5",
-    "@hyperapp/router": "^0.7.0"
+    "hyperapp-hash-router": "^0.1.0"
   },
   "devDependencies": {
     "jest": "^23.4.0",
     "rollup": "^0.62.0",
+    "rollup-plugin-node-resolve": "^3.3.0",
     "typescript": "^2.9.0"
   }
 }
