--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "author": "Yaroslav Serhieiev <noomorph@gmail.com>",
   "license": "GPL-3",
   "private": false,
-  "dependencies": {
-    "hyperapp": "^1.2.5",
-    "hyperapp-router": "^0.2.2"
+  "scripts": {
+    "test": "jest --verbose --coverage"
   },
+  "dependencies": {},
   "devDependencies": {
-    "typescript": "^2.8.1"
+    "@types/jest": "^23.3.1",
+    "jest": "^23.4.2",
+    "ts-jest": "^23.0.1",
+    "typescript": "^2.9.0"
   }
 }
