--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "scripts": {
     "test": "jest --verbose --coverage"
   },
-  "dependencies": {},
+  "dependencies": {
+    "bit-buffer": "^0.2.3"
+  },
   "devDependencies": {
     "@types/jest": "^23.3.1",
     "jest": "^23.4.2",
