--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "test": "jest --verbose --coverage"
   },
   "dependencies": {
-    "bit-buffer": "^0.2.3",
-    "koi8-u": "^1.0.0"
+    "bit-buffer": "^0.2.3"
   },
   "devDependencies": {
     "@types/jest": "^23.3.1",
+    "@types/lodash": "^4.14.116",
+    "@types/node": "^10.5.6",
     "jest": "^23.4.2",
+    "lodash": "^4.17.10",
     "ts-jest": "^23.0.1",
     "typescript": "^2.9.0"
   }
