--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "GPL-3",
   "private": false,
   "scripts": {
+    "bundle": "scripts/bundle.sh",
     "test": "jest --verbose --coverage"
   },
   "dependencies": {
@@ -18,6 +19,7 @@
     "@types/node": "^10.5.6",
     "jest": "^23.4.2",
     "lodash": "^4.17.10",
+    "rollup": "^0.63.5",
     "ts-jest": "^23.0.1",
     "typescript": "^2.9.0"
   }
