--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "multi-test-web",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "Psychological questionnaires online",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Yaroslav Serhieiev <noomorph@gmail.com>",
   "dependencies": {
-    "gatsby": "^2.8.3",
-    "gatsby-image": "^2.1.2",
-    "gatsby-plugin-manifest": "^2.1.1",
-    "gatsby-plugin-offline": "^2.1.1",
-    "gatsby-plugin-react-helmet": "^3.0.12",
-    "gatsby-plugin-sharp": "^2.1.3",
-    "gatsby-source-filesystem": "^2.0.38",
-    "gatsby-transformer-javascript-frontmatter": "^2.0.10",
-    "gatsby-transformer-sharp": "^2.1.21",
+    "gatsby": "^2.13.4",
+    "gatsby-image": "^2.2.4",
+    "gatsby-plugin-manifest": "^2.2.1",
+    "gatsby-plugin-offline": "^2.2.1",
+    "gatsby-plugin-react-helmet": "^3.1.0",
+    "gatsby-plugin-sharp": "^2.2.2",
+    "gatsby-source-filesystem": "^2.1.2",
+    "gatsby-transformer-javascript-frontmatter": "^2.1.0",
+    "gatsby-transformer-sharp": "^2.2.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1"
   },
   "devDependencies": {
-    "prettier": "^1.17.1"
+    "prettier": "^1.18.2"
   },
   "keywords": [
     "gatsby"
